# micro-ros-build

micro_ros_setup/config/freertos/: list_apps.sh
micro_ros_setup/config/freertos/crane_supervisor_v1/: board.repos  build.sh  configure.sh  create.sh  flash.sh  package.xml
micro_ros_setup/config/freertos/crazyflie21/: client_uros_packages.repos
micro_ros_setup/config/host/generic/: client_host_packages.repos
micro_ros_setup/config/nuttx/generic/: client_uros_packages.repos
micro_ros_setup/config/zephyr/generic/: client_uros_packages.repos
